# llm-front-end-8

./: .env.example  .gitignore  Dockerfile  README.md  agent_setup.sh  instructions2.md  models.yml  pyproject.toml  run.sh  start.py
backend/app/: main.py
backend/app/api/: auth.py  chat.py  llm.py  mcp.py  websocket.py
backend/app/auth/: authorization.py  middleware.py
backend/app/core/: config.py  logging.py
backend/app/services/: chat_service.py  llm_service.py  mcp_service.py  tool_schema_service.py
backend/tests/: test_api.py  test_auth.py  test_chat_service.py  test_llm_service.py  test_mcp_service.py
frontend/: index.html
frontend/js/: app.js
frontend/js/components/: chat.js  llm-selector.js  tools.js
frontend/js/utils/: api.js  websocket.js
frontend/styles/: chat.css  main.css  tools.css
mcp/: config.json
mcp/calculator/: tool.json
mcp/code_analyzer/: tool.json
mcp/ddg_search/: server.py  tool.json
mcp/file_ops/: tool.json
mcp/filesystem/: server.py  tool.json
mcp/linear_regression/: server.py  tool.json
